--- a/visualization.html
+++ b/visualization.html
@@ -590,8 +590,6 @@
 
             // Métricas base (mantendo a formatação original)
             const metrics = [
-                { name: 'Over 1.5 HT', value: (stats.over1_5HT / totalGames) * 100, raw: `${stats.over1_5HT}/${totalGames}`, icon: '⚽' },
-                { name: 'Over 2.5 HT', value: (stats.over2_5HT / totalGames) * 100, raw: `${stats.over2_5HT}/${totalGames}`, icon: '⚽' },
                 { name: 'Over 2.5 FT', value: (stats.over2_5FT / totalGames) * 100, raw: `${stats.over2_5FT}/${totalGames}`, icon: '⚽' },
                 { name: 'Over 3.5 FT', value: (stats.over3_5FT / totalGames) * 100, raw: `${stats.over3_5FT}/${totalGames}`, icon: '⚽' },
                 { name: 'Over 4.5 FT', value: (stats.over4_5FT / totalGames) * 100, raw: `${stats.over4_5FT}/${totalGames}`, icon: '⚽' }
@@ -601,33 +599,33 @@
             const homeWinRate = (stats.winHome / totalGames) * 100;
             const awayWinRate = (stats.winAway / totalGames) * 100;
 
-            // Encontra métricas com alta probabilidade (acima de 80%)
-            const highProbMetrics = metrics.filter(metric => metric.value >= 80);
-
             let finalMetrics = [];
 
             // Adiciona métricas regulares com alta probabilidade
-            finalMetrics.push(...metrics.filter(m => m.value >= 80));
+            const highProbMetrics = metrics.filter(metric => metric.value >= 80);
+            finalMetrics.push(...highProbMetrics);
 
             // Adiciona análise especial dos jogadores
             if (highProbMetrics.length > 0) {
                 const bestMetric = highProbMetrics[0];
                 if (homeWinRate >= 35) {
                     finalMetrics.push({
-                        name: `${homePlayer} - ${bestMetric.name}`,  // Changed format here
+                        name: `${homePlayer}`,
                         value: homeWinRate,
                         raw: `${stats.winHome}/${totalGames}`,
                         isSpecial: true,
-                        icon: '👑'
+                        icon: '👑',
+                        description: bestMetric.name
                     });
                 }
                 if (awayWinRate >= 35) {
                     finalMetrics.push({
-                        name: `${awayPlayer} - ${bestMetric.name}`,  // Changed format here
+                        name: `${awayPlayer}`,
                         value: awayWinRate,
                         raw: `${stats.winAway}/${totalGames}`,
                         isSpecial: true,
-                        icon: '👑'
+                        icon: '👑',
+                        description: bestMetric.name
                     });
                 }
             }
@@ -647,7 +645,7 @@
                 const response = await fetch(apiUrl);
                 const data = await response.json();
                 const h2hStats = processH2HStats(data.mutualInfos.lastGames);
-                return getTop3Metrics(h2hStats);
+                return getTop3Metrics(h2hStats, homePlayer, awayPlayer);
             } catch (error) {
                 console.error('Erro ao buscar métricas H2H:', error);
                 return null;
