--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -643,35 +643,37 @@
 
       <!-- Conteúdo da aba de histórico -->
       <div class="tab-content" id="history-tab">
-        <!-- Resumo -->
-        <div class="summary">
-          <div class="summary-item gain">
-            <div class="label">Ganho Total</div>
-            <div class="value" id="ganho-total">R$ 0,00</div>
+        <div class="stats-container">
+          <div class="stats-grid">
+            <div class="stat-card">
+              <div class="stat-label">Apostas</div>
+              <div class="stat-value" id="total-apostas">0</div>
+            </div>
+            <div class="stat-card">
+              <div class="stat-label">Lucro/Prejuízo</div>
+              <div class="stat-value" id="lucro-value">R$ 0,00</div>
+            </div>
+            <div class="stat-card">
+              <div class="stat-label">ROI</div>
+              <div class="stat-value" id="roi-value">0%</div>
+            </div>
+            <div class="stat-card">
+              <div class="stat-label">Progressão</div>
+              <div class="stat-value" id="progression-value">0%</div>
+            </div>
           </div>
-          <div class="summary-item loss">
-            <div class="label">Perda Total</div>
-            <div class="value" id="perda-total">R$ 0,00</div>
-          </div>
-          <div class="summary-item balance">
-            <div class="label">Saldo Total</div>
-            <div class="value" id="saldo-total">R$ 0,00</div>
+
+          <div class="chart-container">
+            <div id="roi-indicator" class="roi-indicator">0%</div>
+            <div id="grafico"></div>
           </div>
         </div>
 
-        <!-- Gráfico -->
-        <div class="chart-container">
-          <h3 class="chart-title">Desempenho (7 dias)</h3>
-          <div id="grafico"></div>
-        </div>
-
-        <!-- Lista de apostas -->
         <h3 class="history-title">Histórico de Apostas</h3>
-        <div class="history-list" id="apostas-lista">
-          <!-- Preenchido dinamicamente -->
+        <div id="apostas-lista" class="history-list">
+          <!-- Lista de apostas será preenchida dinamicamente -->
         </div>
       </div>
-
       <!-- Conteúdo da aba de mercados -->
       <div class="tab-content" id="markets-tab">
         <h3 class="history-title">Gerenciar Mercados</h3>
@@ -1100,50 +1102,44 @@
     }
 
     async function criarGrafico(apostas) {
+      if (!apostas || apostas.length === 0) {
+        document.getElementById("grafico").innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Sem dados para exibir</div>';
+        return;
+      }
+
       const ctx = document.createElement("canvas");
       document.getElementById("grafico").innerHTML = "";
       document.getElementById("grafico").appendChild(ctx);
 
       // Obter os últimos 7 dias
-      const datas = [];
-      for (let i = 6; i >= 0; i--) {
+      const datas = Array.from({ length: 7 }, (_, i) => {
         const data = new Date();
-        data.setDate(data.getDate() - i);
-        datas.push(data);
-      }
+        data.setDate(data.getDate() - (6 - i));
+        return data;
+      });
 
       // Calcular saldos diários e acumulados
       let saldoAcumulado = 0;
-      const saldosDiarios = datas.map((data) => {
+      const saldosDiarios = datas.map(data => {
         const dataStr = data.toLocaleDateString("pt-BR");
         const inicioDoDia = new Date(data.setHours(0, 0, 0, 0));
         const fimDoDia = new Date(data.setHours(23, 59, 59, 999));
 
-        // Filtrar apostas para este dia
-        const apostasDoDia = apostas.filter((aposta) => {
-          const dataAposta = aposta.timestamp?.toDate() || new Date();
-          return dataAposta >= inicioDoDia && dataAposta <= fimDoDia;
+        const apostasDoDia = apostas.filter(aposta => {
+          const dataAposta = aposta.timestamp?.toDate();
+          return dataAposta && dataAposta >= inicioDoDia && dataAposta <= fimDoDia;
         });
 
-        // Calcular saldo para o dia
         let saldoDoDia = 0;
-        apostasDoDia.forEach((aposta) => {
+        apostasDoDia.forEach(aposta => {
           const stake = parseFloat(aposta.stake.toString().replace(/[^\d.,]/g, "").replace(",", "."));
           const odds = parseFloat(aposta.odds.toString().replace(",", "."));
 
           switch (aposta.resultado) {
-            case "green":
-              saldoDoDia += stake * (odds - 1);
-              break;
-            case "red":
-              saldoDoDia -= stake;
-              break;
-            case "meio-green":
-              saldoDoDia += (stake / 2) * (odds - 1);
-              break;
-            case "meio-red":
-              saldoDoDia -= stake / 2;
-              break;
+            case "green": saldoDoDia += stake * (odds - 1); break;
+            case "red": saldoDoDia -= stake; break;
+            case "meio-green": saldoDoDia += (stake / 2) * (odds - 1); break;
+            case "meio-red": saldoDoDia -= stake / 2; break;
           }
         });
 
@@ -1155,28 +1151,36 @@
         };
       });
 
-      // Preparar dados para o gráfico
-      const labels = saldosDiarios.map(item => item.data);
-      const dadosDiarios = saldosDiarios.map(item => item.saldoDiario);
-      const dadosAcumulados = saldosDiarios.map(item => item.saldoAcumulado);
+      // Atualizar estatísticas
+      const totalApostas = apostas.length;
+      const ultimoSaldo = saldoAcumulado;
+      const totalStake = apostas.reduce((acc, aposta) =>
+        acc + parseFloat(aposta.stake.toString().replace(/[^\d.,]/g, "").replace(",", ".")), 0);
+      const roi = totalStake > 0 ? (ultimoSaldo / totalStake) * 100 : 0;
 
-      // Atualizar o indicador ROI
+      document.getElementById('total-apostas').textContent = totalApostas;
+      document.getElementById('lucro-value').textContent = formatarMoeda(ultimoSaldo);
+      document.getElementById('roi-value').textContent = `${roi.toFixed(2)}%`;
+      document.getElementById('progression-value').textContent = `${((ultimoSaldo / totalStake) * 100).toFixed(2)}%`;
+
+      // Atualizar indicador ROI
       const roiIndicator = document.getElementById('roi-indicator');
-      if (roiIndicator) {
-        const ultimoSaldo = dadosAcumulados[dadosAcumulados.length - 1];
-        roiIndicator.textContent = formatarMoeda(ultimoSaldo);
-        roiIndicator.className = `roi-indicator ${ultimoSaldo >= 0 ? 'roi-positive' : 'roi-negative'}`;
+      roiIndicator.textContent = formatarMoeda(ultimoSaldo);
+      roiIndicator.className = `roi-indicator ${ultimoSaldo >= 0 ? 'roi-positive' : 'roi-negative'}`;
+
+      // Criar novo gráfico
+      if (window.myChart) {
+        window.myChart.destroy();
       }
 
-      // Criar gráfico
-      new Chart(ctx, {
+      window.myChart = new Chart(ctx, {
         type: "line",
         data: {
-          labels: labels,
+          labels: saldosDiarios.map(item => item.data),
           datasets: [
             {
               label: "Saldo Diário",
-              data: dadosDiarios,
+              data: saldosDiarios.map(item => item.saldoDiario),
               borderColor: "#bb86fc",
               backgroundColor: "rgba(187, 134, 252, 0.1)",
               borderWidth: 2,
@@ -1189,7 +1193,7 @@
             },
             {
               label: "Saldo Acumulado",
-              data: dadosAcumulados,
+              data: saldosDiarios.map(item => item.saldoAcumulado),
               borderColor: "#03dac6",
               backgroundColor: "rgba(3, 218, 198, 0.1)",
               borderWidth: 3,
@@ -1200,7 +1204,7 @@
               fill: true,
               order: 1
             }
-          ],
+          ]
         },
         options: {
           responsive: true,
