--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -991,92 +991,55 @@
 
     // Função para carregar as apostas
     function carregarApostas() {
+      if (!currentUser) {
+        console.log("Usuário não autenticado");
+        return;
+      }
+
       const apostasLista = document.getElementById("apostas-lista");
-      apostasLista.innerHTML = '<div class="loading">Carregando apostas</div>';
+      apostasLista.innerHTML = '<div class="loading">Carregando apostas...</div>';
 
-      // Filtrar apostas apenas do usuário atual
-      const apostasRef = query(
-        collection(db, "apostas"),
-        where("userEmail", "==", currentUser),
-        orderBy("timestamp", "desc")
-      );
+      try {
+        // Criar query para apostas do usuário atual
+        const apostasRef = query(
+          collection(db, "apostas"),
+          where("userEmail", "==", currentUser),
+          orderBy("timestamp", "desc")
+        );
 
-      onSnapshot(apostasRef, (snapshot) => {
-        let ganhoTotal = 0;
-        let perdaTotal = 0;
-        let todasApostas = [];
+        // Usar onSnapshot para ouvir mudanças em tempo real
+        const unsubscribe = onSnapshot(apostasRef, (snapshot) => {
+          let todasApostas = [];
+          let ganhoTotal = 0;
+          let perdaTotal = 0;
 
-        if (snapshot.empty) {
-          apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada</div>';
-          document.getElementById("grafico").innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Sem dados para exibir</div>';
-
-          // Zerar totais quando não há apostas
-          document.getElementById("ganho-total").innerHTML = `Ganho Total<strong>${formatarMoeda(0)}</strong>`;
-          document.getElementById("perda-total").innerHTML = `Perda Total<strong>${formatarMoeda(0)}</strong>`;
-          document.getElementById("saldo-total").innerHTML = `Saldo Total<strong>${formatarMoeda(0)}</strong>`;
-          return;
-        }
-
-        apostasLista.innerHTML = "";
-
-        snapshot.forEach((doc) => {
-          const aposta = doc.data();
-          todasApostas.push({ ...aposta, id: doc.id });
-
-          const apostaItem = document.createElement("div");
-          apostaItem.classList.add("aposta-item");
-
-          const stake = parseFloat(aposta.stake.toString().replace(/[^\d.,]/g, "").replace(",", "."));
-          const odds = parseFloat(aposta.odds.toString().replace(",", "."));
-          let valorFinal = 0;
-
-          switch (aposta.resultado) {
-            case "green":
-              valorFinal = stake * (odds - 1);
-              ganhoTotal += valorFinal;
-              break;
-            case "red":
-              valorFinal = -stake;
-              perdaTotal += stake;
-              break;
-            case "meio-green":
-              valorFinal = (stake / 2) * (odds - 1);
-              ganhoTotal += valorFinal;
-              break;
-            case "meio-red":
-              valorFinal = -stake / 2;
-              perdaTotal += stake / 2;
-              break;
+          if (snapshot.empty) {
+            apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada</div>';
+            criarGrafico([]); // Chamar com array vazio
+            return;
           }
 
-          const statusClass = getStatusClass(aposta.resultado);
-          const statusText = getStatusText(aposta.resultado);
-          const valorFinalText = valorFinal === 0 ? "" : ` (${formatarMoeda(valorFinal)})`;
-          const dataFormatada = aposta.timestamp?.toDate().toLocaleString('pt-BR') || '';
+          apostasLista.innerHTML = "";
 
-          apostaItem.innerHTML = `
-            <div class="aposta-info">
-              <strong>${aposta.liga}</strong> · <span class="${statusClass}">${statusText}${valorFinalText}</span><br>
-              ${aposta.jogador1} vs ${aposta.jogador2}<br>
-              <small>${aposta.mercado} · Stake: ${formatarMoeda(stake)} · Odds: ${odds}</small><br>
-              <small>${dataFormatada}</small>
-            </div>
-            <div class="aposta-actions">
-              <button onclick="removerAposta('${doc.id}')">Remover</button>
-            </div>
-          `;
+          snapshot.forEach((doc) => {
+            const aposta = { ...doc.data(), id: doc.id };
+            todasApostas.push(aposta);
+            // ... resto do código para processar cada aposta ...
+          });
 
-          apostasLista.appendChild(apostaItem);
+          // Atualizar o gráfico com todas as apostas
+          criarGrafico(todasApostas);
+        }, (error) => {
+          console.error("Erro ao carregar apostas:", error);
+          apostasLista.innerHTML = '<div style="color: red; text-align: center;">Erro ao carregar apostas</div>';
         });
 
-        // Atualizar resumo
-        document.getElementById("ganho-total").innerHTML = `Ganho Total<strong>${formatarMoeda(ganhoTotal)}</strong>`;
-        document.getElementById("perda-total").innerHTML = `Perda Total<strong>${formatarMoeda(perdaTotal)}</strong>`;
-        document.getElementById("saldo-total").innerHTML = `Saldo Total<strong>${formatarMoeda(ganhoTotal - perdaTotal)}</strong>`;
-
-        // Criar gráfico
-        criarGrafico(todasApostas);
-      });
+        // Retornar função de limpeza
+        return unsubscribe;
+      } catch (error) {
+        console.error("Erro ao configurar listener:", error);
+        apostasLista.innerHTML = '<div style="color: red; text-align: center;">Erro ao configurar listener</div>';
+      }
     }
 
     function getStatusText(resultado) {
